--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.15.3"
   },
   "devDependencies": {
-    "babel-cli": "^6.24.1"
+    "babel-cli": "^6.24.1",
+    "babel-preset-react": "^6.24.1"
   }
 }
