--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "MERN",
     "react"
   ],
-  "author": "Eric Foster",
+  "author": "Zeatful",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/zeatful/lern-mern/issues"
